--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ let lastEnemyMoveTime = 0;
 let enemyMoveInterval = 500;
 
 let moveCooldown = 0;
-let lastMoveDir = {dx: 1, dy: 0}; // Direzione iniziale verso destra
+let lastMoveDir = {dx: 1, dy: 0}; 
 
 function setup() {
   createCanvas(cols * cellSize, rows * cellSize + barHeight);
