--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ function drawGameOver() {
   fill(255, 0, 0);
   textAlign(CENTER, CENTER);
   textSize(32);
-  text("GAME OVER\nPress 'R' to start again", width / 2, height / 2);
+  text("GAME OVER\nPress 'R' to start again\n", width / 2, height / 2);
 }
 
 function drawVictory() {
@@ -371,7 +371,7 @@ function drawVictory() {
   textSize(48);
   text("VICTORY!", width / 2, height / 2);
   textSize(20);
-  text("Press 'R' to start again", width / 2, height / 2 + 50);
+  text("Press 'R' to start again\n", width / 2, height / 2 + 50);
 }
 </script>
 </body>
