--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ function drawInstructions() {
   fill(255);
   textAlign(CENTER, CENTER);
   textSize(20);
-  text("\nREPOor \nUse arrow keys to move.\nPress SPACE to shoot (limited shots per level).\nCollect all items and return to base.\nAvoid enemies or stun them with your shots.\n\nPress 'R' to start. \n\n", width / 2, height / 2);
+  text("\n\nREPOor \nUse arrow keys to move.\nPress SPACE to shoot (limited shots per level).\nCollect all items and return to base.\nAvoid enemies or stun them with your shots.\n\nPress 'R' to start. \n\n", width / 2, height / 2);
 }
 
 function drawGameOver() {
